--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "nodemon server/server.js",
+    "debug": "ndb server/server.js"
   },
   "author": "NOOR_ALI",
   "license": "ISC",
   "devDependencies": {
     "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.3",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "slugify": "^1.6.6",
+    "validator": "^13.15.15"
   }
 }
