--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon server/server.js",
+    "start:prod": "set NODE_ENV=production&& nodemon server/server.js ",
     "debug": "ndb server/server.js"
   },
   "author": "NOOR_ALI",
@@ -16,8 +17,10 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
     "qs": "^6.14.0",
     "slugify": "^1.6.6",
