--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start:dev": "set NODE_ENV=development&& nodemon server/server.js",
     "start:prod": "set NODE_ENV=production&& nodemon server/server.js ",
     "debug": "ndb server/server.js"
   },
